--- a/utils/index.html
+++ b/utils/index.html
@@ -27,7 +27,29 @@
       </section>
     </header>
     <!-- {{{body}}} -->
-    <!-- Content goes in here -->
+    <section>
+      <h1></h1>
+      <div>
+        <div>
+            <form action="">
+              <div class="login-form"> 
+                <div class="form-group">
+                <label for="email-login">email:</label>
+                <input class="form-input" type="text" id="email-login" />
+              </div>
+              <div class="form-group">
+                <label for="password-login">password:</label>
+                <input class="form-input" type="password" id="password-login" />
+              </div>
+                <div class="form-group">
+                <button class="btn btn-primary" type="submit">login</button>
+                <h4>No account?  </h4>
+                <h4>Click here :<a href="/signup"> Signup</a> </h4>
+              </div>
+            </form>
+        </div>
+      </div>
+    </section>
     <!--  -->
     <footer>
       <div class="footer">© Feet Go here</div>
